# slides-design

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  style-preview-arch.html  style-preview-v2.html  style-preview.html  verify.py
.claude/: settings.json
assets/: manifest.json
docs/superpowers/plans/: 2026-07-11-slide-style-template.md
docs/superpowers/specs/: 2026-07-11-slide-style-template-design.md
src/slidestyle/: __init__.py  assets.py  build.py  guide.py  layouts.py  shapes.py  text.py  theme.py  tokens.py
src/slidestyle/svg/: __init__.py  embed.py  generate.py  style.py
