[project]
name = "slidestyle"
version = "0.1.0"
description = "Apple-minimal PowerPoint style template generator"
requires-python = ">=3.11"
dependencies = ["python-pptx>=0.6.23", "lxml>=5.0"]

[project.optional-dependencies]
svg = ["cairosvg>=2.7"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
